# gfw-rs

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  docker.sh  exec.sh  rules.yaml
.github/workflows/: ci.yml
analyzer/: Cargo.toml
analyzer/src/: lib.rs  tls.rs
analyzer/src/tcp/: http.rs  mod.rs  tls.rs
analyzer/src/udp/: dns.rs  mod.rs  openvpn.rs  quic.rs  wireguard.rs
analyzer/src/udp/internal/quic/: header.rs  mod.rs  quic.rs
analyzer/src/utils/: bytebuffer.rs  lsm.rs  mod.rs  string.rs
apiserver/: Cargo.toml
apiserver/src/: error.rs  file.rs  lib.rs  main.rs  save.rs  service.rs
assets/pcaps/: dns.cap  dns.pcap  ipv4frags.pcap
cmd/: Cargo.toml
cmd/src/: config.rs  main.rs
config/src/: config.rs
docs/: dev.md
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  tcp.rs  udp.rs  utils.rs  worker.rs
front/: index.html  script.js  styles.css
io/: Cargo.toml
io/src/: lib.rs  nfqueue.rs  pcap.rs
modifier/: Cargo.toml
modifier/src/: lib.rs
modifier/src/udp/: dns.rs
ruleset/: Cargo.toml  build.rs
ruleset/src/: engine.rs  expr_rule.rs  lib.rs
ruleset/src/builtins/: cidr.rs  mod.rs
ruleset/src/builtins/geo/: matcher.rs  mod.rs
ruleset/src/builtins/geo/v2geo/: load.rs  mod.rs  v2geo.rs  v2geo_loader.rs
ruleset/src/v2geo/: load.rs  mod.rs
