[workspace]
resolver = "2"
members = [
    "analyzer", 
    "apiserver", 
    "cmd", 
    "engine", 
    "io", 
    "modifier", 
    "ruleset",
]


[workspace.dependencies]
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
clap = "4.5.20"

## workspace members
nt-analyzer = { package = "analyzer", path = 'analyzer'}
nt-apiserver = { package = "apiserver", path = 'apiserver'}
nt-cmd = { package = "cmd", path = 'cmd'}
nt-engine = { package = "engine", path = 'engine'}
nt-io = { package = "io", path = 'io'}
nt-modifier = { package = "modifier", path = 'modifier'}
nt-ruleset = { package = "ruleset", path = 'ruleset'}
