[workspace]
resolver = "2"
members = [
  "analyzer",
  "apiserver",
  "cmd",
  "engine",
  "io",
  "modifier",
  "ruleset",
]


[workspace.dependencies]
axum = "0.7.7"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pnet = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rhai = "1.20.0"
snafu = "0.8"
lazy_static = "1.5.0"
serde_json = "1.0.132"
serde-aux = "4.5.0"

## workspace members
nt-analyzer = { package = "analyzer", path = 'analyzer' }
nt-apiserver = { package = "apiserver", path = 'apiserver' }
nt-cmd = { package = "cmd", path = 'cmd' }
nt-engine = { package = "engine", path = 'engine' }
nt-io = { package = "io", path = 'io' }
nt-modifier = { package = "modifier", path = 'modifier' }
nt-ruleset = { package = "ruleset", path = 'ruleset' }
