[workspace]
resolver = "2"
members = [
  "analyzer",
  "apiserver",
  "cmd",
  "config",
  "engine",
  "io",
  "modifier",
  "ruleset",
]


[workspace.dependencies]
axum = "0.7.7"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tower = "0.5.1"
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pnet = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rhai = { version = "1.20.0", features = ["sync", "serde"] }
lazy_static = "1.5.0"
serde_json = "1.0.132"
serde-aux = "4.5.0"
snafu = "0.8.5"
notify = "7.0.0"

## workspace members
gfw-analyzer = { package = "analyzer", path = 'analyzer' }
gfw-cmd = { package = "cmd", path = 'cmd' }
gfw-engine = { package = "engine", path = 'engine' }
gfw-io = { package = "io", path = 'io' }
gfw-modifier = { package = "modifier", path = 'modifier' }
gfw-ruleset = { package = "ruleset", path = 'ruleset' }
gfw-config = { package = "config", path = 'config' }
