[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bytes = { version = "1.7.2", features = ["serde"] }
hex = "0.4.3"
pnet.workspace = true
ringbuf = "0.4.7"
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
