[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
lazy_static.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
nt-cmd.workspace = true
tracing-subscriber.workspace = true
