[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
lazy_static.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
nt-cmd.workspace = true
tracing-subscriber.workspace = true
nt-analyzer.workspace = true
nt-modifier.workspace = true
nt-ruleset.workspace = true
nt-io.workspace = true
rhai.workspace = true
nt-engine.workspace = true
