[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
lazy_static.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
gfw-analyzer.workspace = true
gfw-modifier.workspace = true
gfw-ruleset.workspace = true
gfw-io.workspace = true
rhai.workspace = true
gfw-engine.workspace = true
gfw-config.workspace = true
snafu.workspace = true
clap.workspace = true
notify.workspace = true
serde_yaml.workspace = true
tokio-util = "0.7.13"
