[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
clap.workspace = true
nt-ruleset.workspace = true
serde-aux.workspace = true
nt-engine.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nt-io.workspace = true
nt-analyzer.workspace = true
nt-modifier.workspace = true
rhai.workspace = true
