[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
clap.workspace = true
gfw-ruleset.workspace = true
serde-aux.workspace = true
gfw-engine.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gfw-io.workspace = true
gfw-analyzer.workspace = true
gfw-modifier.workspace = true
rhai.workspace = true
notify.workspace = true
tokio-util.workspace = true
