[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytes = "1.8.0"
lru = "0.12.5"
nt-analyzer.workspace = true
nt-io.workspace = true
nt-modifier.workspace = true
nt-ruleset.workspace = true
num_cpus = "1.16.0"
pnet.workspace = true
rhai.workspace = true
rs-snowflake = "0.6.0"
serde_json.workspace = true
tokio.workspace = true
tokio-util = "0.7.13"
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
