[package]
name = "io"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
crc32fast = "1.4.2"
iptables = "0.5.2"
libc = "0.2.162"
nfq = { version = "0.2.5", features = ["ct"] }
pcap = "2.2.0"
socket2 = "0.5.7"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
