[package]
name = "ruleset"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
gfw-modifier.workspace = true
rhai.workspace = true
gfw-analyzer.workspace = true
tracing.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json"] }
protobuf = "3.7.1"

[build-dependencies]
protobuf-codegen = "3.7.1"
