[package]
name = "ruleset"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
gfw-modifier.workspace = true
rhai.workspace = true
gfw-analyzer.workspace = true
tracing.workspace = true
serde_json.workspace = true
ipnetwork = "0.20.0"
regex = "1.11.1"
reqwest = { version = "0.12.10", features = ["blocking"] }
protobuf = "3.7.1"

[build-dependencies]
protobuf-codegen = "3.7.1"
